# jira-cleanup

./: .env.example  .gitignore  ANALYZER_OPTIMIZATION_CHECKLIST.md  ARCHITECTURE_REVIEW.md  DEAD_CODE_CLEANUP_PLAN.md  DEVELOPMENT_PLAN.md  LANGCHAIN_MIGRATION_CHECKLIST.md  LICENSE  MULTI_INSTANCE_COMPLETION_CHECKLIST.md  QUIESCENCE_ABSTRACTION_PLAN.md  README.md  current_functionality_analysis.md  design_decisions.md  jira_cleanup_architecture_analysis.md  jira_cleanup_code_recommendations.md  jira_comment.md  jira_comment_298.md  jira_info.md  migration_audit.md  migration_report.md  migration_status.md  next_steps.md  pyproject.toml  pyrightconfig.json  quickstart.md  requirements.txt  setup.py
docs/: README.md
docs/architecture/: overview.md
docs/changes/: CLI_MIGRATION_CHECKLIST.md  DEVELOPMENT_PLAN.md  QUIESCENT_ABSTRACTION_DEVELOPMENT_PLAN.md  changelog.md  roadmap.md
docs/developer/: api-reference.md  contributing.md
docs/user/: README.md  configuration.md  installation.md  quickstart.md
migration_tools/: README.md  __init__.py  compare_structures.py
output/: results.txt  results2.txt  results3.txt  results4.txt
project-notes/: README.md  jira_comment.md
src/: main.py
src/domain/: __init__.py
src/domain/entities/: __init__.py
src/domain/repositories/: __init__.py  comment_repository.py  ticket_repository.py
src/domain/services/: __init__.py  comment_generator.py  quiescence_evaluator.py
src/infrastructure/: __init__.py
src/infrastructure/repositories/: __init__.py  database_ticket_repository.py  jira_comment_repository.py  (+1 more)
src/iterators/: __init__.py  base.py  project.py
src/jiraclean/: __init__.py  __main__.py  main.py
src/jirautil/: __init__.py  client.py  dry_run_client.py  exceptions.py
src/llm/: __init__.py  assessment.py
src/processors/: __init__.py  base.py  quiescent.py
src/prompts/: __init__.py  registry.py
src/utils/: __init__.py
tests/: test_cli_errors.py  test_terminal_sizes.py
(+69 files in other folders)
